fix: overflow-y on first block

--- a/src/assets/styles/pages/Home/FirstBlock.module.scss
+++ b/src/assets/styles/pages/Home/FirstBlock.module.scss
@@ -74,7 +74,7 @@
     background: none;
     padding-block: unset;
     margin-top: 50px;
-    overflow-x: hidden;
+    overflow: hidden;
 
     &::before {
       margin: -20px;
